# 2410-17-site

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
main/: check_db_connect.py  localization_data_to_db.py  manage.py  signals_from_xls_to_db_3.py
main/config_ui/: admin.py  admin_form.py  apps.py  models.py  urls.py  views.py
main/config_ui/init_data/: settings.py
main/config_ui/migrations/: 0001_initial.py  0002_load_settings.py  0003_load_settings_2.py  0004_delete_pageblock.py  0005_load_asset_status_page_configs.py  0006_alter_assetpage_page_alter_block_type_and_more.py
main/config_ui/services/: block_manager.py  block_manager2.py  formatters.py  pasp_manager.py  use_cases.py
main/custom_logging/: handlers.py  mess_template.py
main/dashboard/: admin.py  admin_form.py  apps.py  models.py  urls.py  views.py
main/dashboard/data/: assistmodel.py
main/dashboard/migrations/: 0001_initial.py  0002_alter_assets_type_and_more.py
main/dashboard/templates/: 404.html  500.html  change_field.html
main/dashboard/utils/: SqlManager.py  async_func.py  cache_tools.py  guid.py  hash.py  kafka_drv.py  number.py  pdf_drv.py  request_status.py  time_func.py  to_pdf.py
main/kafka_sync/: __init__.py  apps.py
main/laser/: admin.py  diag_signals.py  get_diag_signals.py  models.py  settings.py  urls.py  use_cases.py  vicroria_m.py  views.py
main/laser/migrations/: 0001_initial.py  (+1 more)
main/localization/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
main/main/: settings.py  urls.py  views.py
main/templates/: index.html
(+79 files in other folders)
